--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "chromedriver": "^2.35.0",
     "compression-webpack-plugin": "^1.1.10",
     "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.4.2",
+    "copy-webpack-plugin": "^4.5.0",
     "cross-env": "^5.1.3",
     "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.10",
@@ -56,15 +56,15 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.4",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.9.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^1.1.10",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.0.4",
     "http-proxy-middleware": "^0.17.3",
     "husky": "^0.14.3",
     "inject-loader": "^3.0.0",
@@ -95,9 +95,9 @@
     "vue-loader": "^14.1.1",
     "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.5.13",
-    "webpack": "^3.11.0",
-    "webpack-bundle-analyzer": "^2.11.0",
-    "webpack-dev-middleware": "^2.0.6",
+    "webpack": "^4.0.1",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-dev-middleware": "^3.0.0",
     "webpack-hot-middleware": "^2.21.1",
     "webpack-merge": "^4.1.2"
   },
